# community-agent-bridge

./: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src-react/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-react/__tests__/: setup.ts
src-react/__tests__/stores/: agentStore.test.ts
src-react/components/error/: ErrorBoundary.tsx  index.ts
src-react/components/layout/: Header.tsx  (+7 more)
src-react/hooks/: index.ts  useAcsCall.ts  useAgentProvider.ts  useBehaviorProcessor.ts  useCallAnalytics.ts  useCopilotAgent.ts  useCopilotAuth.ts  useInitializeProviders.ts  useMeetingAgent.ts  useMeetingChat.ts  useMeetingProvider.ts  useSpeechProvider.ts  useTextToSpeech.ts
src-react/lib/: logger.ts  utils.ts
src-react/providers/: index.ts  init.ts
src-react/services/: acsService.ts  analyticsService.ts  behaviorProcessor.ts  captionAggregationService.ts  chatService.ts  copilotAuthService.ts  copilotService.ts  credentialService.ts  index.ts  intentDetectionService.ts  tokenService.ts  ttsService.ts  validationService.ts
src-react/stores/: agentBehaviorStore.ts  agentCredentialHelpers.ts  agentProvidersStore.ts  agentStore.ts  appStore.ts  callStore.ts  configStore.ts  index.ts  navigationStore.ts  onboardingStore.ts  preferencesStore.ts  presetPatterns.ts  providerStore.ts  secureStorage.ts  tabsStore.ts
src-react/types/: behavior.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
(+44 files in other folders)
